--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -13,14 +13,14 @@ steps:
       version: '2'
       services:
         selenium_hub:
-          image: selenium/hub
+          image: selenium/hub:3.13.0
           ports:
             - 4444
           environment:
             - SE_OPTS=-debug
             - GRID_MAX_SESSION=5
         chrome_node:
-          image: selenium/node-chrome
+          image: selenium/node-chrome:3.13.0
           ports:
             - 5900
             - 5555
@@ -33,7 +33,7 @@ steps:
             - NODE_MAX_SESSION=5
             - NODE_MAX_INSTANCES=5
         firefox_node:
-          image: selenium/node-firefox
+          image: selenium/node-firefox:3.13.0
           ports:
             - 5900
             - 5555
