--- a/worker/codefresh.yml
+++ b/worker/codefresh.yml
@@ -26,4 +26,13 @@ steps:
       - REGISTRY_USERNAME=${{USERNAME}}
       - REGISTRY_PASSWORD=${{PASSWORD}}
     commands: 
-      - python /paclair.py scan 
+      - python /paclair.py scan
+  ArchiveReport:
+    image: mesosphere/aws-cli
+    commands:
+      - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}.html --acl public-read
+    on_success:
+     metadata:
+        set:
+          - ${{BuildingDockerImage.imageId}}:
+              - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}.html"
