--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -1,6 +1,8 @@
 version: '1.0'
 stages:
   - build
+  - "security scans"
+  - reporting
   - "pull request"
   - staging
   - production
@@ -65,6 +67,56 @@ steps:
         dockerfile: Dockerfile
         tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
     fail_fast: true
+  ScanningDockerImages:
+    type: parallel
+    stage: "security scans"
+    steps:
+      ScanResultImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/result
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      ScanVoteImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/vote
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      ScanWorkerImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/worker
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+  ArchiveClairReports:
+    type: parallel
+    stage: reporting
+    steps:
+      ArchiveResultClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildResultImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+      ArchiveVoteClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildVoteImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+      ArchiveWorkerClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildWorkerImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
   NotifyGitHubPREnvCreating:
     title: Set Pull Request Environment pending
     image: cloudposse/github-status-updater
