--- a/.codefresh/codefresh-dvts.yml
+++ b/.codefresh/codefresh-dvts.yml
@@ -1,5 +1,11 @@
 version: '1.0'
 steps:
+  RemoveExistingTestReports:
+   title: Removing Previous Test Reports
+   image: alpine
+   commands:
+    - cd '${{CF_VOLUME_PATH}}/'
+    - rm -r -f allure-results
   GetKubernetesServicesEndpoints:
     title: Getting Kubernetes Services Endpoints
     image: codefresh/cfstep-helm
@@ -52,6 +58,12 @@ steps:
         environment:
           VOTE_ENDPOINT_IP: ${{VOTE_ENDPOINT_IP}}
           RESULT_ENDPOINT_IP: ${{RESULT_ENDPOINT_IP}}
-        command: bash -c 'IFS=" " read -a browserarray <<< "${{BROWSERS}}" && for browser in "$${browserarray[@]}"; do BROWSER=$$browser python -m pytest -vvv --html=./selenium-report-$${browser}.html --self-contained-html ./tests/selenium/test_app.py; done'
+        command: bash -c 'IFS=" " read -a browserarray <<< "${{BROWSERS}}" && for browser in "$${browserarray[@]}"; do BROWSER=$$browser python -m pytest -vvv --alluredir=${{CF_VOLUME_PATH}}/allure-results ./tests/selenium/test_app.py; done'
         volumes:
           - '${{CF_VOLUME_NAME}}:/codefresh/volume'
+ GenerateTestReporting:
+   title: Generating Test Reporting
+   image: codefresh/cf-docker-test-reporting
+   working_directory: '${{CF_VOLUME_PATH}}/'
+   environment:
+     - CF_BUILD_ID=CF_ORIG_BUILD_ID'
