--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.4-alpine
 
 RUN apk update && \
     apk add bash && \
-    pip install selenium pytest pytest-html
+    pip install selenium pytest allure-pytest
