--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -1,4 +1,5 @@
 version: '1.0'
+mode: parallel
 stages:
   - build
   - "security scans"
@@ -67,56 +68,78 @@ steps:
         dockerfile: Dockerfile
         tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
     fail_fast: true
-  ScanningDockerImages:
-    type: parallel
-    stage: "security scans"
-    steps:
-      ScanResultImage:
-        image: codefresh/cfstep-paclair:3.0.0
-        environment:
-          - IMAGE=example-voting-app/result
-          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-      ScanVoteImage:
-        image: codefresh/cfstep-paclair:3.0.0
-        environment:
-          - IMAGE=example-voting-app/vote
-          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-      ScanWorkerImage:
-        image: codefresh/cfstep-paclair:3.0.0
-        environment:
-          - IMAGE=example-voting-app/worker
-          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-  ArchiveClairReports:
-    type: parallel
-    stage: reporting
-    steps:
-      ArchiveResultClairReport:
-        image: mesosphere/aws-cli
-        commands:
-          - aws s3 cp ./reports/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-        on_success:
-          metadata:
-            set:
-              - ${{BuildResultImage.imageId}}:
-                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
-      ArchiveVoteClairReport:
-        image: mesosphere/aws-cli
-        commands:
-          - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-        on_success:
-          metadata:
-            set:
-              - ${{BuildVoteImage.imageId}}:
-                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
-      ArchiveWorkerClairReport:
-        image: mesosphere/aws-cli
-        commands:
-          - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-        on_success:
-          metadata:
-            set:
-              - ${{BuildWorkerImage.imageId}}:
-                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+  ScanResultImage:
+    image: codefresh/cfstep-paclair:3.0.0
+    environment:
+      - IMAGE=example-voting-app/result
+      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+    when:
+      steps:
+       - name: BuildResultImage
+         on:
+           - success 
+  ScanVoteImage:
+    image: codefresh/cfstep-paclair:3.0.0
+    environment:
+      - IMAGE=example-voting-app/vote
+      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+    when:
+      steps:
+       - name: BuildVoteImage
+         on:
+           - success 
+  ScanWorkerImage:
+    image: codefresh/cfstep-paclair:3.0.0
+    environment:
+      - IMAGE=example-voting-app/worker
+      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+    when:
+      steps:
+       - name: BuildWorkerImage
+         on:
+           - success 
+  ArchiveResultClairReport:
+    image: mesosphere/aws-cli
+    commands:
+      - aws s3 cp ./reports/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+    on_success:
+      metadata:
+        set:
+          - ${{BuildResultImage.imageId}}:
+            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+    when:
+      steps:
+       - name: ScanResultImage
+         on:
+           - success 
+  ArchiveVoteClairReport:
+    image: mesosphere/aws-cli
+    commands:
+      - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+    on_success:
+      metadata:
+        set:
+          - ${{BuildVoteImage.imageId}}:
+            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+    when:
+      steps:
+       - name: ScanVoteImage
+         on:
+           - success 
+  ArchiveWorkerClairReport:
+    image: mesosphere/aws-cli
+    commands:
+      - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+    on_success:
+      metadata:
+        set:
+          - ${{BuildWorkerImage.imageId}}:
+            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+    when:
+      steps:
+       - name: ScanWorkerImage
+         on:
+           - success 
   NotifyGitHubPREnvCreating:
     title: Set Pull Request Environment pending
     image: cloudposse/github-status-updater
