--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -291,10 +291,9 @@ steps:
         any:
           stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
           prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
-      steps:
-        - name: RunPRDVTs
-          on:
-            - finished
+      branch:
+        only:
+          - master
   UpgradeStagingRelease:
     stage: staging
     title: Upgrading Staging Release
