--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -218,6 +218,12 @@ steps:
         - name: NotifyGitHubPREnvCreating
           on:
             - success
+        - name: ArchiveVoteClairReport
+          on:
+            - success
+        - name: ArchiveWorkerClairReport
+          on:
+            - success
   RunPRDVTs:
     stage: "pull request"
     image: 'codefresh/cli:latest'
@@ -281,23 +287,14 @@ steps:
       - CHART_REF=example-voting-app
       - CHART_VERSION=${{CF_RELEASE_TAG}}
     when:
-      steps:
-        - name: ArchiveResultClairReport
-          on:
-            - success
-        - name: ArchiveVoteClairReport
-          on:
-            - success
-        - name: ArchiveWorkerClairReport
-          on:
-            - success
       condition:
         any:
           stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
           prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
-      branch:
-        only:
-          - master
+      steps:
+        - name: RunPRDVTs
+          on:
+            - finished
   UpgradeStagingRelease:
     stage: staging
     title: Upgrading Staging Release
